update of supplementary and paper

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -607,7 +607,7 @@ Excitations belonging to this sector thus lose their intrinsic physical meaning 
 \subfloat[DOS of Excitation energies]
 {\label{C6H6_exc}
 \includegraphics[scale=0.58]{Fig5b_C6H6_dos_rev1.eps}}
-\caption{(Color online) Benzene molecule. (a): Excitation Landscape: the excitations have been separated in discrete and continuum sector following the criteria of Sec.~\ref{ExcitationLandscape}. (b): DOS of excitation energies $\Omega_a$. The first IP threshold is depicted as the vertical dashed line.}
+\caption{(Color online) Benzene molecule. (a): Excitation Landscape: the excitations have been separated in discrete (black circle) and continuum (blue square) sectors following the criteria of Sec.~\ref{ExcitationLandscape}. (b): DOS of excitation energies $\Omega_a$. The first IP threshold is depicted as the vertical dashed line.}
 \end{figure}
 
 In Fig.~\ref{CO_exc} and \ref{C6H6_exc} we plot the DOS of the Liouvillian for the $CO$  and Benzene molecules,
@@ -679,11 +679,10 @@ express the localized FS -- and consequently the reference value of $\alpha_{ij}
 We have analyzed the fulfillment of Eq.~\eqref{sminus2} for molecules of various
 sizes and symmetries.
 In Fig.~\ref{co_AlphaExc} we show explicitly such a comparison for the $CO$ and $C_{60}$ molecules.
-We notice that a considerable number of pseudo-continuum excitations is required
-to find the correct result; the sector of the discrete excitations, even though
-parametrized by localized, observable (in the sense of reproducible) excited states,
-appears to be largely insufficient to express the reference fluctuation state. Its contribution is even negligible w.r.t.
-the one coming from the continuum sector.
+We notice that, in both the cases, a considerable number of pseudo-continuum excitations is required
+to find the correct result; the sector of the discrete excitations
+%, even though parametrized by localized, observable (in the sense of reproducible) excited states,
+appears to be largely insufficient to express the reference fluctuation state. In particular, in the case of $CO$, the contribution of localized excitations is even negligible w.r.t. the one coming from the continuum sector.
 
 % \begin{figure}
 % \includegraphics[scale=0.6]{Fig6_CO_statPolvsExc.eps}
@@ -725,8 +724,10 @@ come from the Localized Sector (LS) of the excitations, by focusing also on the 
 \label{alphaTable}
 \end{table}
 
-This scenario can be also found for the other molecules presented in Table \ref{alphaTable};
-varying the molecule size and symmetry does not modify the qualitative behavior of the excitation landscape. In addition the
+%This scenario can be also found for the other molecules presented in Table \ref{alphaTable};
+This scenario is confirmed by the results for the other molecules presented in Table \ref{alphaTable};
+varying the molecule size and symmetry does not modify the qualitative behavior of the excitation landscape (for further details
+about the dependence of the excitation landscape on the size of the molecule see the supplementary material). In addition the
 localized sector of the excitations alone is largely insufficient to express $\alpha_{ij}$.
 Such considerations are independent on the number of atoms of the molecule, as the range in $\omega$ needed to
 achieve satisfactory agreement is largely above the last valence ionization threshold, which is
