update plot and supplementary

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -680,17 +680,12 @@ We have analyzed the fulfillment of Eq.~\eqref{sminus2} for molecules of various
 sizes and symmetries.
 In Fig.~\ref{co_AlphaExc} we show explicitly such a comparison for the $CO$ and $C_{60}$ molecules.
 We notice that, in both the cases, a considerable number of pseudo-continuum excitations is required
-to find the correct result; the sector of the discrete excitations
-%, even though parametrized by localized, observable (in the sense of reproducible) excited states,
-appears to be largely insufficient to express the reference fluctuation state. In particular, in the case of $CO$, the contribution of localized excitations is even negligible w.r.t. the one coming from the continuum sector.
+to find the correct result; the sector of the discrete excitations appears to be largely insufficient to express the 
+reference fluctuation state. 
+%In particular, in the case of $CO$, the contribution of localized excitations is even negligible w.r.t. the one coming from the continuum sector.
+In particular, in the case of $CO$, the complete excitation set is able to reproduce the reference value of $\alpha_{zz}$, but the contribution of localized sector is negligible w.r.t. the one coming from the continuum one. Instead, for the $C_{60}$, the localized sector provides a more significant contribution but a higher number of the psuedo-continuum excitations should be included in the sum of \eqref{sminus2} to satisfy the $S_{-2}$ sum-rule.  
 
-% \begin{figure}
-% \includegraphics[scale=0.6]{Fig6_CO_statPolvsExc.eps}
-% \caption{\label{co_AlphaExc}(Color online) Convergence of the statical polarizability $\alpha_{zz}$ of the $CO$ molecule, in a box of $11.5$ \AA,
-% w.r.t the excitations considered in the integral of Eq.~\eqref{sminus2}. The reference value obtained from Eq.~\eqref{staticalpha} is represented as a
-% horizontal red dashed line. The value of the IP energy is indicated by a vertical black dashed line. For each excitation energy, the values of the
-% oscillator strengths $w^a_{zz}$ of Eq.~\eqref{sminus2} are also plotted. }
-% \end{figure}
+
 
 \begin{figure}
 \centering
@@ -700,7 +695,7 @@ appears to be largely insufficient to express the reference fluctuation state. I
 \centering
 \subfloat[$C_{60}$]
 {\label{C60_alphavsExc}
-\includegraphics[scale=0.2]{Fig6b_C60_statPolvsExc.eps}}
+\includegraphics[scale=0.6]{Fig6b_C60_statPolvsExc.eps}}
 \caption{\label{co_AlphaExc}(Color online) Convergence of the statical polarizability $\alpha_{zz}$ of the $CO$ (panel a) and $C_{60}$ (panel b) molecules,
 w.r.t the excitations considered in the integral of Eq.~\eqref{sminus2}. The reference value obtained from Eq.~\eqref{staticalpha} is represented as a
 horizontal red dashed line. The value of the IP energy is indicated by a vertical black dashed line. For each excitation energy, the values of the
