--- a/Supplementary_material.tex
+++ b/Supplementary_material.tex
@@ -61,6 +61,15 @@ When $\op V'$ is switched on the excitation modes are expressed as a combination
 \label{exc-land}
 \end{figure}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=9cm]{DOS_Afla&CO.eps} 
+    \caption{DOS of the (bound) KS states for the Aflatoxin and the $CO$ molecules. }
+\label{dos}
+\end{figure}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
