minor correction to the supplementary

--- a/Supplementary_material.tex
+++ b/Supplementary_material.tex
@@ -55,7 +55,7 @@ the one of Fig.~5 of the paper, in the case of the Benzene molecule. This holds 
 
 The growth of the localized sector with the number of atoms of the molecule seems thus to be a general feature.
 A simple interpretation of this fact may be provided by considering perturbatively the coupling term $\op V'=0$ in Eq.~19 of the paper.
-Indeed, larger molecules behave possess a high number of localized Kohn-Sham (KS) orbitals that span a wide energy range.
+Indeed, larger molecules possess a high number of localized Kohn-Sham (KS) orbitals that span a wide energy range.
 A numerical evidence in support of this argument is presented in Fig. \ref{dos}, where the DOS of the KS (bound) orbitals of the Aflatoxin and $CO$ molecules are directly compared.
 In a simplified two-levels picture, in which $\op V'=0$, the KS empty orbitals $\psi_a$ coincide with the excitation modes defined in eq. (17) and the associated energy is parametrized as $\Omega_a=\epsilon_a-\epsilon_p$. In this case to the increase of the energy range spanned by the localized orbitals it directly corresponds a richer sector of localized excitations.
 When $\op V'$ is switched on the excitation modes are expressed as a combination of KS orbitals but the presence of a high number of localized orbitals allows for a rich sector of localized excitations, as confirmed by the results of Fig. \ref{exc-land}.
