--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -10,6 +10,7 @@
 \usepackage{mathtools,braket}
 \usepackage{tikz}
 \usepackage{xifthen}
+\usepackage{url}
 %\pgfplotsset{compat=1.15}
 
 % notation for standard math
@@ -680,10 +681,10 @@ We have analyzed the fulfillment of Eq.~\eqref{sminus2} for molecules of various
 sizes and symmetries.
 In Fig.~\ref{co_AlphaExc} we show explicitly such a comparison for the $CO$ and $C_{60}$ molecules.
 We notice that, in both the cases, a considerable number of pseudo-continuum excitations is required
-to find the correct result; the sector of the discrete excitations appears to be largely insufficient to express the 
-reference fluctuation state. 
+to find the correct result; the sector of the discrete excitations appears to be largely insufficient to express the
+reference fluctuation state.
 %In particular, in the case of $CO$, the contribution of localized excitations is even negligible w.r.t. the one coming from the continuum sector.
-In particular, in the case of $CO$, the complete excitation set is able to reproduce the reference value of $\alpha_{zz}$, but the contribution of localized sector is negligible w.r.t. the one coming from the continuum one. Instead, for the $C_{60}$, the localized sector provides a more significant contribution but a higher number of the psuedo-continuum excitations should be included in the sum of \eqref{sminus2} to satisfy the $S_{-2}$ sum-rule.  
+In particular, in the case of $CO$, the complete excitation set is able to reproduce the reference value of $\alpha_{zz}$, but the contribution of localized sector is negligible w.r.t. the one coming from the continuum one. Instead, for the $C_{60}$, the localized sector provides a more significant contribution but a higher number of the psuedo-continuum excitations should be included in the sum of \eqref{sminus2} to satisfy the $S_{-2}$ sum-rule.
 
 
 
@@ -878,7 +879,7 @@ Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employ
 Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where it is also important to include a sufficient number of unoccupied states in the transition operators. As pointed out in the text such states behave as plane waves: the features of wavelets enable us to represent localized and delocalized states on equal footing.
 For each size of the simulation domain, the number of unoccupied states used for building the Casida' eigenproblem has been increased up to convergence of the presented results.
 
-All the details of the calculations, the \textsl{Jupyter} notebooks of the data analysis, including the supplementary information, may be found at the URL~\footnote{\texttt{https://github.com/luigigenovese/LR-nb/blob/master/ POLARIZABILITY/nb\_paper/LR\_Analysis.ipynb}, or \texttt{https://gitlab.com/luigigenovese/ localization-of-excitations/ blob/master/LR\_Analysis.ipynb}}
+All the details of the calculations, the \textsl{Jupyter} notebooks of the data analysis, including the ones presented in the Supplementary Information, may be found at the URL~\footnote{\protect\url{https://github.com/luigigenovese/LR-nb/blob/master/POLARIZABILITY/nb_paper/LR_Analysis.ipynb}}
 
 \subsection{$CO$}
 The molecule is oriented along the $z$ axis and the $z$-dimension of the box is equal to 11.5, 15.1 and 16.6 \AA.
