fig3 converted in eps and ref to supplementary material

--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -315,4 +315,7 @@ pages  ="19800-19810",
 publisher  ="The Royal Society of Chemistry",
 doi  ="10.1039/C8CP03569E",
 url  ="http://dx.doi.org/10.1039/C8CP03569E",
-abstract  ="Static polarizabilities are the first response of the electron density to electric fields{,} and are therefore important for predicting intermolecular and molecule-field interactions. They also offer a global measure of the accuracy of the treatment of excited states by density functionals in a formally exact manner. We have developed a database of benchmark static polarizabilities for 132 small species at equilibrium geometry{,} using coupled cluster theory through triple excitations (extrapolated to the complete basis set limit){,} for the purpose of developing and assessing density functionals. The performance of 60 popular and recent functionals are also assessed{,} which indicates that double hybrid functionals perform the best{,} having RMS relative errors in the range of 2.5–3.8%. Many hybrid functionals also give quite reasonable estimates with 4–5% RMS relative error. A few meta-GGAs like mBEEF and MVS yield performance comparable to hybrids{,} indicating potential for improved excited state predictions relative to typical local functionals. Some recent functionals however are found to be prone to catastrophic failure (possibly as a consequence of overparameterization){,} indicating a need for caution in applying these.
+abstract  ="Static polarizabilities are the first response of the electron density to electric fields{,} and are therefore important for predicting intermolecular and molecule-field interactions. They also offer a global measure of the accuracy of the treatment of excited states by density functionals in a formally exact manner. We have developed a database of benchmark static polarizabilities for 132 small species at equilibrium geometry{,} using coupled cluster theory through triple excitations (extrapolated to the complete basis set limit){,} for the purpose of developing and assessing density functionals. The performance of 60 popular and recent functionals are also assessed{,} which indicates that double hybrid functionals perform the best{,} having RMS relative errors in the range of 2.5–3.8%. Many hybrid functionals also give quite reasonable estimates with 4–5% RMS relative error. A few meta-GGAs like mBEEF and MVS yield performance comparable to hybrids{,} indicating potential for improved excited state predictions relative to typical local functionals. Some recent functionals however are found to be prone to catastrophic failure (possibly as a consequence of overparameterization){,} indicating a need for caution in applying these."
+}
+
+
