--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -724,8 +724,8 @@ come from the Localized Sector (LS) of the excitations, by focusing also on the 
 \end{table}
 
 This scenario is confirmed by the results for the other molecules presented in Table \ref{alphaTable}; varying the molecule size
-and symmetry does not modify the qualitative behavior of the excitation landscape (see Supplementary Material at~\footnote{\texttt{URL insert by the publisher}} for further details about the dependence of the excitation landscape on the size of the molecule). 
-In addition the localized sector of the excitations alone is largely insufficient to express $\alpha_{ij}$. Such considerations 
+and symmetry does not modify the qualitative behavior of the excitation landscape (see Supplementary Material at~\footnote{\texttt{URL insert by the publisher}} for further details about the dependence of the excitation landscape on the size of the molecule).
+In addition the localized sector of the excitations alone is largely insufficient to express $\alpha_{ij}$. Such considerations
 are independent of the number of atoms of the molecule, as the range in $\omega$ needed to achieve satisfactory agreement is largely above the last valence ionization threshold, which is an intensive quantity.
 
 Once again, this proves that, for any numerical treatment,  pseudo-continuum excitations are fundamental in view of a correct expression
@@ -852,7 +852,7 @@ The contribution of the coupling operator in the equations of motion of excited 
 & \bra{s}\op V'[\op E_a]\ket{\psi_p} = \sum_{qs'}\left(U[\decay{s}{p};\excite{q}{s'}]X^a_{qs'} + U[\decay{s}{p};\decay{s'}{q}]Y^a_{qs'}\right) \;,\nn \\
 & \bra{\psi_p}\op V'[\op E_a]\ket{s} = \sum_{qs'}\left(U[\excite{p}{s};\excite{q}{s'}]X^a_{qs'} + U[\excite{p}{s};\decay{s'}{q}]Y^a_{qs'}\right) \;, \nn
 \end{align}
-Given that we employ real functions both for $p$ and $s$ is real we also have $\excite{p}{s}(\r,\r') = \decay{s}{p}(\r',\r)$ and the density operator is symmetric in $\r \leftrightarrow \r'$.
+Given that we employ real functions both for $p$ and $s$ we also have $\excite{p}{s}(\r,\r') = \decay{s}{p}(\r',\r)$ and the density operator is symmetric in $\r \leftrightarrow \r'$.
 These conditions applied together imply that $U[\excite{p}{s};\excite{q}{s'}] = U[\decay{s}{p};\decay{s'}{q}]$, as well as $U[\decay{s}{p};\excite{q}{s'}] = U[\excite{p}{s};\decay{s'}{q}]$,
 and so equations \eqref{ExcitationOperatorsDef3} can be recasted in matrix form
 \be\lb{ExcitationMatrixEq1}
